Test/errors/err_if_const_not_constant.cb
extern int main()
{
    int x = 1;
    expect_error("compile-time constant expression");
    if const (x) { }
    return 0;
}
